<resources>
    <string name="app_name">AplikacjaDietetyczna</string>
    <string name="title_activity_catering">Map</string>
    <string name="show_map">Pokaż na mapie</string>
    <string name="give_height">Podaj wzrost w centymetrach</string>
    <string name="give_weight">Podaj wagę w kilogramach</string>
    <string name="calc_bmi">Oblicz BMI</string>
    <string name="give_age">Podaj wiek</string>
    <string name="select_sex">Wybierz płeć</string>
    <string name="select_activity">Wybierz aktywność</string>
    <string name="calc_cpm">Oblicz CPM</string>
    <string name="day_cal">Dzienne spożycie kalorii wynosi</string>
    <string name="diet_details">Plan diety</string>
    <string name="shop_list">Lista zakupów</string>
    <string name="catering">Catering</string>
    <string name="warning_data">Podaj wszystkie dane!</string>
    <string name="value_str">Wartość musi byc większa od 0!</string>
    <string name="starvation">wygłodzenie</string>
    <string name="emaciaton">wychudzenie</string>
    <string name="low_weight">niedowaga</string>
    <string name="normal_weight">waga prawidłowa</string>
    <string name="obeseI">I stopień otyłości"</string>
    <string name="obeseII">II stopień otyłości"</string>
    <string name="obeseIII">III stopień otyłości"</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="activity_1">Nieaktywny tryb życia (brak ćwiczeń)</string>
    <string name="activity_2">Mało aktywny tryb życia (lekkie ćwiczenia)</string>
    <string name="activity_3">Umiarkowanie aktywny tryb życia (ćwiczenia 3–5 razy w tygodniu)</string>
    <string name="activity_4">Aktywny tryb życia (ćwiczenia 6-7 razy w tygodniu)</string>
    <string name="activity_5">Bardzo aktywny tryb życia (codzienne ćwiczenia i praca fizyczna)</string>
    <string name="select_target">Wybierz cel diety</string>
    <string name="reduction">Redukcja</string>
    <string name="cons_weight">Utrzymanie wagi</string>
    <string name="mass">Masa</string>
    <string name="save_data">Zapisz dane</string>
    <string name="select_number">Wybierz liczbę posiłków</string>
    <string name="prefer">Preferencje żywieniowe</string>
    <string name="none">Brak</string>
    <string name="veget">Wegetariańska</string>
    <string name="warning_database">Aktualizacja bazy danych nie powiodła się</string>
    <string name="success">Dane zostały poprawnie zapisane</string>
    <string name="warning_dietplan">Problem z odczytem danych</string>
    <string name="food_list">Lista zakupów</string>
    <string name="food_item">Dodaj do listy</string>
    <string name="see_list">Zobacz listę</string>
    <string name="give_name">Wpisz nazwę</string>
    <string name="give_amount">Wpisz ilość</string>
    <string name="select_property">Wybierz rodzaj ilości</string>
    <string name="number">szt.</string>
    <string name="gram">g</string>
    <string name="kilogram">kg</string>
    <string name="litr">l</string>
    <string name="mililitr">ml</string>
    <string name="list_error">Nie można zapisać do listy!</string>
    <string name="list_success">Poprawnie zapisano!</string>
    <string name="mon">Poniedziałek</string>
    <string name="tue">Wtorek</string>
    <string name="wed">Środa</string>
    <string name="thu">Czwartek</string>
    <string name="fri">Piątek</string>
    <string name="sat">Sobota</string>
    <string name="sun">Niedziela</string>
    <string name="open">Otwarte</string>
    <string name="close">Zamknięte</string>

</resources>
