<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4C3"
    android:orientation="vertical"
    tools:context="com.example.alicja.aplikacjadietetyczna.FoodListActivity">
    <TextView
    android:text="@string/food_list"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <Button
        android:id="@+id/add_food_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/food_item"
        android:ems="8"
        android:textStyle="bold"
        android:textSize="25sp"
        android:backgroundTint="#FFB74D"/>
    <Button
        android:id="@+id/see_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/see_list"
        android:ems="8"
        android:textStyle="bold"
        android:textSize="25sp"
        android:backgroundTint="#FFB74D"/>

</LinearLayout>
