<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F0F4C3"
    android:orientation="vertical"
    tools:context="com.example.alicja.aplikacjadietetyczna.DietInfoActivity">

    <TextView
        android:text="@string/give_height"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/height_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:ems="6"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        />
    <TextView
        android:text="@string/give_weight"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/weight_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:ems="6"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        />
    <TextView
        android:text="@string/give_age"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/age_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:ems="6"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:inputType="number"
        />
    <TextView
        android:text="@string/select_sex"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sex_list"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="80sp"
        android:layout_marginLeft="80sp"
        android:backgroundTint="@android:color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/select_activity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/activity_list"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:backgroundTint="@android:color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/select_target"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/num_list"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:backgroundTint="@android:color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/select_number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/target_list"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:backgroundTint="@android:color/black"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/save_data"
        android:ems="8"
        android:textStyle="bold"
        android:textSize="25sp"
        android:backgroundTint="#FFB74D"/>



</LinearLayout>
</ScrollView>