<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4C3"
    android:orientation="vertical"
    tools:context="com.example.alicja.aplikacjadietetyczna.FoodListItem">
    <TextView
        android:text="@string/give_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:ems="6"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        />
    <TextView
        android:text="@string/give_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/amount_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:ems="6"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:inputType="number|numberDecimal"
        />
    <TextView
        android:text="@string/select_property"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/prop_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="90sp"
        android:layout_marginRight="90sp"
        android:backgroundTint="@android:color/black" />
    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/save_data"
        android:ems="8"
        android:textStyle="bold"
        android:textSize="25sp"
        android:backgroundTint="#FFB74D"/>
</LinearLayout>
